--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class="circle"></div>
         <header>
             <a href="#"><img src="./assets/logo.png" class="logo"></a>
-            <ul>
+            <div class="toggle" onclick="toggleMenu()"></div>
+            <ul class="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Novidades</a></li>
@@ -55,6 +56,13 @@
         function changeCircleColor(color){
             const circle = document.querySelector('.circle')
             circle.style.background = color;
+        }
+
+        function toggleMenu() {
+            var menuToggle = document.querySelector('.toggle')
+            var navigation = document.querySelector('.navigation')
+            menuToggle.classList.toggle('active')
+            navigation.classList.toggle('active')
         }
     </script>
 </body>
